Checkout/ Add user Address List  (#632)
* update api return address with detail

* add address list

* update

* update

* handle chosee address

* fix sonar build fail

* update

* use stream